Fix: roulette item alignment

--- a/scss/modules/_roulette.scss
+++ b/scss/modules/_roulette.scss
@@ -18,6 +18,7 @@
         max-width: 100%;
         white-space: normal;
         overflow: hidden;
+        text-align: center;
     }
     &__item-header {
         font-size: 0.9rem;
